@@ -7,3 +7,9 @@ Created menu.py- clone of piwars_menu.py but it only includes non piwars-specifi
 09th Jul 2016:
 Overhauled design of backup script. Before, the user ran the backup script which waited 10s to give you time to swap the keyboard dongle for the USB drive. Then the backup script would blindly attempt to copy files across to the drive. Now, the backup script is linked to udev so when the USB drive is hotplugged udev runs the backup script automatically and copies all the files across without needing human input. Plug the stick in, wait for the copy to complete, then unplug the stick. Easy.
 
+11th Jul 2016:
+Finished backup script! Now it works as described above, every time the drive is hotplugged, although:
+One problem remains- the filenames are shortened to only 8 chars long, with a max of 3 chars for the extension excluding the full stop. All files and directories are copied in lowercase too for some reason. For example the file "REALLYlongName.html" becomes "reallylo.htm". Data in the files is not modified though.
+Started looking into creating a fake screen for pygame to display (nothing) to. I use pygame to get key presses but the robot has no standard screen (only an OLED) so there's no point showing a pygame screen.
+I copied some code off Average Man Vs Pi's pastebin page with the code for AverageBot with the correct command, but it's not working yet.
+Removed backup option from menu.py - this is automatic now (see above).
